--- a/package.xml
+++ b/package.xml
@@ -58,6 +58,7 @@
   <build_depend>octomap_ros</build_depend>
   <build_depend>octomap_msgs</build_depend>
   <build_depend>dynamic_msgs</build_depend>
+  <build_depend>pcl_ros</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>roslib</exec_depend>
@@ -68,7 +69,8 @@
   <exec_depend>octomap_ros</exec_depend>
   <exec_depend>octomap_msgs</exec_depend>
   <exec_depend>dynamic_msgs</exec_depend>
-   
+  <exec_depend>pcl_ros</exec_depend>
+
 
   <export>
 
